voices, sound, file restructures, and other misc changes